--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" href="css/skit.css">
 		<link rel="stylesheet" href="assets/skit-dist/skit.css">
+		<meta property="og:title" content="Skit">
+		<meta property="og:site_name" content="Skit">
+		<meta property="og:url" content="https://skit.network/">
+		<meta property="og:description" content="SKIT is an advanced front-end for web software development.">
+		<meta property="og:type" content="website">
+		<meta property="og:image" content="https://skit.network/og.png">
+		<meta property="og:image:alt" content="SKIT">
+		<meta property="og:image:width" content="1200">
+		<meta property="og:image:height" content="630">
 	</head>
 	<body>
 		<div class="center">
