--- a/public/docs.html
+++ b/public/docs.html
@@ -62,6 +62,7 @@
 					</div>
 					<button onclick="submenu2.classList.toggle('active')" class="title"><i class="fi fi-rr-comment-alt"></i> NOT STANDARD</button>
 					<div id="submenu2" class="submenu active">
+						<div><a href="/icons.html#menuIcons">Icons</a></div>
 						<div><a href="/docs.html#menuInfo">Info</a></div>
 						<div><a href="/docs.html#menuDualRange">Dual Range</a></div>
 						<div><a href="/docs.html#menuCompToggle">Toggle</a></div>
