--- a/public/index.html
+++ b/public/index.html
@@ -18,61 +18,79 @@
 		<meta property="og:image:alt" content="SKIT">
 		<meta property="og:image:width" content="1200">
 		<meta property="og:image:height" content="630">
-		<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
-		<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css'>
+		<link rel="stylesheet" async href="https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css">
+		<link rel="stylesheet" async href="https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css">
+		<link rel="stylesheet" async href="https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css">
+		<link rel="stylesheet" async href="https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css">
 	</head>
 	<body>
 		<header>
 			<nav class="nav">
 				<a href="/" data-title="Home"><img class="preview" alt="skit" src="assets/skit.png" /></a>
-				<a href="/docs.html" data-title="Documentation"><i class="fi fi-rs-document-signed"></i> DOCS</a>
-				<a href="/donate.html" data-title="Donate"><i class="fi fi-rs-usd-circle"></i> DONATE</a>
+				<a href="/" data-title="Start">START</a>
+				<a href="/docs" data-title="Documentation"><i class="fi fi-rs-document-signed"></i> DOCS</a>
+				<a href="/donate" data-title="Donate"><i class="fi fi-rs-usd-circle"></i> DONATE</a>
 				<a target="_blank" rel="no-follow" href="https://discord.gg/sveP5Ecb"><i class="fi fi-brands-discord"></i> DISCORD</a>
 				<a target="_blank" rel="no-follow" href="https://www.instagram.com/skit.network/"><i class="fi fi-brands-instagram"></i> INSTAGRAM</a>
 				<a target="_blank" rel="no-follow" href="https://github.com/themoiza/skit/"><i class="fi fi-brands-github"></i> CONTRIBUTE</a>
 			</nav>
 		</header>
-		<section class="center">
-			<p><img class="preview" alt="skit" src="assets/skit.png" /></p>
-			<h1>SKIT</h1>
-			<p>SKIT is an advanced front-end for web software development.</p>
-		</section>
-		<section>
-			<div class="flex">
-				<div class="col-flex-6">
-					<div class="pdr2">
-						<h2>Use Skit Dist</h2>
-						<div class="field w100p">
-							<textarea aria-label="use skit dist" rows="13" readonly>&lt;!DOCTYPE&nbsp;html&gt;
-&lt;html&gt;
-    &lt;head&gt;
-        &lt;link&nbsp;rel=&quot;stylesheet&quot;&nbsp;href=&quot;https://skit.network/assets/skit&#45;dist/skit.css&quot;&gt;
-    &lt;/head&gt;
-    &lt;body&gt;
-        &lt;script&nbsp;src=&quot;https://skit.network/assets/skit&#45;dist/skit.js&quot;&gt;&lt;/script&gt;
-    &lt;/body&gt;
-&lt;/html&gt;
-</textarea>
-						</div>
-					</div>
-				</div>
-				<div class="col-flex-6">
-					<div class="pdl2">
-						<h2>Clone</h2>
-						<div class="flex">
-							<div class="col-flex-9">
-								<div class="field w100p">
-									<input type="text" aria-label="git clone" readonly value="git clone git@github.com:themoiza/skit.git" />
-								</div>
-							</div>
-							<div class="col-flex-3">
-								<button class="btn btn-pri w100p">COPY</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+		<div id="app"></div>
 		<script src="assets/skit-dist/skit.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
+		<script src="/js/menu.js"></script>
+		<script>
+
+			window.matchMedia('(prefers-color-scheme: dark)').addListener(function (e) {
+				var mode = e.matches ? Darkmode(true) : Darkmode(false);
+			});
+
+			window.Darkmode = (t) => {
+
+				if(t){
+					document.body.classList.add('DarkMode');
+					document.body.classList.remove('LightMode');
+				}else{
+					document.body.classList.remove('DarkMode');
+					document.body.classList.add('LightMode');
+				}
+			};
+
+			Darkmode(true);
+
+			window.ToogleDisabled = (id) => {
+
+				var f = document.getElementById(id);
+
+				if(f.getAttribute('disabled')){
+					f.removeAttribute('disabled', 'disabled');
+					f.parentElement.classList.remove('disabled');
+				}else{
+					f.setAttribute('disabled', 'disabled');
+					f.parentElement.classList.add('disabled');
+				}
+			};
+
+			window.TooglerReadonly = (id) => {
+
+				var f = document.getElementById(id);
+
+				if(f.getAttribute('readonly')){
+					f.removeAttribute('readonly', 'readonly');
+					f.parentElement.classList.remove('readonly');
+				}else{
+					f.setAttribute('readonly', 'readonly');
+					f.parentElement.classList.add('readonly');
+				}
+			};
+
+			window.startMVC = () => {
+
+				window.mvc = new Mvc();
+				mvc.init('app');
+			};
+		</script>
+		<script src="/js/vue.min.js"></script>
+		<script src="/js/mvc.js" onload="startMVC()"></script>
 	</body>
 </html>
