--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width,initial-scale=1.0">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<title>SKIT</title>
 		<meta name="description" content="SKIT is an advanced front-end for web software development.">
 		<meta property="og:title" content="Skit">
@@ -25,14 +25,14 @@
 	</head>
 	<body>
 		<header>
-			<nav class="nav">
+			<nav class="nav pdl1 pdr1">
 				<a href="/" data-title="Home"><img class="preview" alt="skit" src="assets/skit.png" /></a>
 				<a href="/" data-title="Start">START</a>
-				<a href="/docs" data-title="Documentation"><i class="fi fi-rs-document-signed"></i> DOCS</a>
-				<a href="/donate" data-title="Donate"><i class="fi fi-rs-usd-circle"></i> DONATE</a>
-				<a target="_blank" rel="no-follow" href="https://discord.gg/sveP5Ecb"><i class="fi fi-brands-discord"></i> DISCORD</a>
-				<a target="_blank" rel="no-follow" href="https://www.instagram.com/skit.network/"><i class="fi fi-brands-instagram"></i> INSTAGRAM</a>
-				<a target="_blank" rel="no-follow" href="https://github.com/themoiza/skit/"><i class="fi fi-brands-github"></i> CONTRIBUTE</a>
+				<a href="/docs" data-title="Documentation"><i class="fi fi-rs-document-signed"></i><span class="no-mob"> DOCS</span></a>
+				<a href="/donate" data-title="Donate"><i class="fi fi-rs-usd-circle"></i><span class="no-mob"> DONATE</span></a>
+				<a target="_blank" rel="no-follow" href="https://discord.gg/KSejmc7c"><i class="fi fi-brands-discord"></i><span class="no-mob"> DISCORD</span></a>
+				<a target="_blank" rel="no-follow" href="https://www.instagram.com/skit.network/"><i class="fi fi-brands-instagram"></i><span class="no-mob"> INSTAGRAM</span></a>
+				<a target="_blank" rel="no-follow" href="https://github.com/themoiza/skit/"><i class="fi fi-brands-github"></i><span class="no-mob"> CONTRIBUTE</span></a>
 			</nav>
 		</header>
 		<div id="app"></div>
