--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,11 @@
 			<nav class="nav pdl1 pdr1">
 				<a href="/" data-title="Home"><img class="preview" alt="skit" src="assets/skit.png" /></a>
 				<a href="/" data-title="Start">START</a>
-				<a href="/docs" data-title="Documentation"><i class="fi fi-rs-document-signed"></i><span class="no-mob"> DOCS</span></a>
-				<a href="/donate" data-title="Donate"><i class="fi fi-rs-usd-circle"></i><span class="no-mob"> DONATE</span></a>
-				<a target="_blank" rel="no-follow" href="https://discord.gg/KSejmc7c"><i class="fi fi-brands-discord"></i><span class="no-mob"> DISCORD</span></a>
-				<a target="_blank" rel="no-follow" href="https://www.instagram.com/skit.network/"><i class="fi fi-brands-instagram"></i><span class="no-mob"> INSTAGRAM</span></a>
-				<a target="_blank" rel="no-follow" href="https://github.com/themoiza/skit/"><i class="fi fi-brands-github"></i><span class="no-mob"> CONTRIBUTE</span></a>
+				<a href="/docs" data-title="Documentation"><i class="fi fi-rs-document-signed"></i><span class="NoMob"> DOCS</span></a>
+				<a href="/donate" data-title="Donate"><i class="fi fi-rs-usd-circle"></i><span class="NoMob"> DONATE</span></a>
+				<a target="_blank" rel="no-follow" href="https://discord.gg/KSejmc7c"><i class="fi fi-brands-discord"></i><span class="NoMob"> DISCORD</span></a>
+				<a target="_blank" rel="no-follow" href="https://www.instagram.com/skit.network/"><i class="fi fi-brands-instagram"></i><span class="NoMob"> INSTAGRAM</span></a>
+				<a target="_blank" rel="no-follow" href="https://github.com/themoiza/skit/"><i class="fi fi-brands-github"></i><span class="NoMob"> CONTRIBUTE</span></a>
 				<div class="field">
 					<select data-skit-listen="darkmode" onchange="Darkmode.config(this.value)">
 						<option value="1">Dark Mode</option>
