--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@
 		<header>
 			<nav class="nav pdl1 pdr1">
 				<a href="/" data-title="Home"><img class="preview" alt="skit" src="assets/skit.png" /></a>
-				<a href="/docs" data-title="Documentation"><i class="fi fi-rs-document-signed"></i><span class="NoMob"> DOCS</span></a>
-				<a href="/donate" data-title="Donate"><i class="fi fi-rs-usd-circle"></i><span class="NoMob"> DONATE</span></a>
+				<a href="/docs" data-title="Documentation"><i class="fi fi-rr-document-signed"></i><span class="NoMob"> DOCS</span></a>
+				<a href="/donate" data-title="Donate"><i class="fi fi-rr-usd-circle"></i><span class="NoMob"> DONATE</span></a>
 				<a target="_blank" rel="no-follow" href="https://discord.com/channels/973324521987792916/973324521987792918"><i class="fi fi-brands-discord"></i><span class="NoMob"> DISCORD</span></a>
 				<a target="_blank" rel="no-follow" href="https://www.instagram.com/skit.network/"><i class="fi fi-brands-instagram"></i><span class="NoMob"> INSTAGRAM</span></a>
 				<a target="_blank" rel="no-follow" href="https://github.com/themoiza/skit/"><i class="fi fi-brands-github"></i><span class="NoMob"> CONTRIBUTE</span></a>
