--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
 							'docs': 'Docs::/js/pages/docs.js',
 							'donate': 'Donate::/js/pages/donate.js',
 							'icons': 'Icons::/js/pages/icons.js',
+							'info': 'InfoPage::/js/pages/infopage.js',
 							'confirmcomp': 'ConfirmComp::/js/pages/confirmcomp.js',
 							'modalcomp': 'Modalcomp::/js/pages/modalcomp.js',
 							'pagination': 'PaginationPage::/js/pages/pagination.js',
@@ -84,6 +85,9 @@
 							'warning-comp': 'WarningComp::/js/pages/warningcomp.js'
 						}
 					}
+				},
+				'Warning': {
+					'max': 10
 				}
 			};
 		</script>
