--- a/public/index.html
+++ b/public/index.html
@@ -66,12 +66,14 @@
 				'MVC': {
 					'allow': true,
 					'id': 'app',
-					'appName': 'SKIT',
+					'appName': 'SKIT Network',
 					'routes': {
 						'auth': {},
 						'noAuth': {
 							'/': 'Index::/js/pages/index.js',
 							'buttons': 'Buttons::/js/pages/buttons.js',
+							'copy': 'CopyPage::/js/pages/copypage.js',
+							'debounce': 'DebouncePage::/js/pages/debouncepage.js',
 							'docs': 'Docs::/js/pages/docs.js',
 							'donate': 'Donate::/js/pages/donate.js',
 							'icons': 'Icons::/js/pages/icons.js',
