--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,8 @@
 							'paniccomp': 'Paniccomp::/js/pages/paniccomp.js',
 							'lockscreen': 'LockScreenComp::/js/pages/lockscreencomp.js',
 							'superselect': 'Superselect::/js/pages/superselect.js',
+							'tabs': 'TabsPage::/js/pages/tabspage.js',
+							'tooltip': 'ToolTipPage::/js/pages/tooltippage.js',
 							'warning-comp': 'WarningComp::/js/pages/warningcomp.js'
 						}
 					}
